app/styles/collected.styl
body {
  background-color: #f4f4f4;
  overflow: hidden;
  font-family: 'Helvetica Neue', Helvetica, Georgia;
  * {
    box-sizing: border-box;
  }
  min-width: 840px;
}


a {
  color: primaryColor;
  text-decoration: none;
  &:hover { color: darkPrimaryColor; }
}

.empty-album-list {
  top: 50%;
  position: relative;
  transform: translateY(-50%);
}

.btn-group {
  font-size: 0;
}

.sub-detail { font-size: 12px; }

input[type="text"] {
  border: 1px solid #787878;
  padding: 12px;
  margin: 12px 0;
  border-radius: 4px;
  outline: none;
  font-size: 14px;
  trans(border-color, .25s);

  &:focus, &:active {
      border-color: primaryColor;
  }
}

.btn {
  font-size: 14px;
  -webkit-appearance: none;
  padding: 8px;
  background-color: darkPrimaryColor;
  border:0;
  color: #fff;
  trans(all, .25s);

  &:hover, &:focus {
    background-color: primaryColor;
    outline: none;
  }

  [class*="icon-"] { 
    font-size: 18px; 
    position: relative;
    top: 2px;
  }
}

.sidebar {
  height: 100vh;
  background-color: primaryColor;
  float: left;
  width: 240px;
  box-shadow: inset -10px 0 25px 0 rgba(0,0,0,0.2);
  color: #fff;

  a.lead {
    color: #fff;
    text-decoration: none;
    font-size: 60px;
    opacity: .5;
    trans(opacity, .25s);

    &:hover, &.active { opacity: 1; }
  }

  .header {
    padding: 12px 0 16px;
    border-bottom: 1px solid darkPrimaryColor;
  }

  .card-item a {
    display: block
    width: 100%;
    padding: 12px 40px 12px 24px;
    color: #fff;
    text-decoration: none;
    background-color: transparent;
    overflow: hidden;
    position: relative;
    truncate();
    trans(background-color, .25s);
    .sub-detail { 
      font-size: 12px;
      color: #fff;
      text-shadow: 0 -1px 0 #darkPrimaryColor;
    }
    [class*="icon-"] {
      position: absolute;
      color: #fff;
      font-size: 24px;
      right: -24px;
      top: 16px;
      opacity: 0;
      trans(all, .25s);
    }

    &.active, &:hover {
      background-color: rgba(0,0,0,.25s);
      [class*="icon-"] {
        right: 12px;
        opacity: 1;
      }
    }
  }

  .album-list {
    calc('height', s('100vh - %s', 142px));
    position: relative;
  }

  .btn {
    display: block;
    color: #fff;
    width: 100%;
    -webkit-appearance: none;
    padding: 12px;
    background-color: rgba(0,0,0,.4);
    border: 0;
    trans(background-color, .25s);

    &:hover, &:focus { background-color: rgba(0,0,0,.2); }
  }

}

.container {
  background-color: #f7f7f7;
  width: 100%;
  height: 100vh;
  padding-left: 240px;

  .wrapper-main {
    border-left: 1px solid #d7d7d7;
  }
}

.panel {
  padding: 24px 220px 24px 12px;

  &.panel-extended { padding: 9px 220px 9px 12px; }

  background-color: #e7e7e7;
  position: relative;

  .sub-detail {
    font-size: 14px;
    color: #787878;
    letter-spacing: 0;
  }

  .toolbar {
    font-size: 16px;
    font-weight: 300;
  }

}


.header {

  h1 {
    border-bottom: 1px solid #d7d7d7;
    position: relative;

    img {
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      right: 24px;
      z-index: 2;
      height: 60px;
      width: auto;
    }
  }

}

.content {
  calc('height', s('100vh - %s', 100px));
  position: relative;

  .empty-collection {
    position: absolute;
    width: 100%;
    padding: 0 24px;
    top: 50%;
    transform: translateY(-50%);
    text-align: center;
    [class*="icon-"] {
      font-size: 200px;
      width: 200px;
      height: 200px;
      color: #d7d7d7;
      margin: 0 auto 24px;
      display: block;
    }
  }
}

.photo-list {
  padding: 12px 0;
  .photo-item {
    padding: 12px;
    cursor: pointer;
    width: 25%;

    .wrapper-card {
      padding: 12px;
      border: 1px solid #d7d7d7;
      position: relative;
      trans(border-color, .25s);


      .actions {
        position: absolute;
        top: 0;
        right: 0;
        opacity: 0;
        trans(opacity, .25s);

        a {
          color: #fff;
          text-decoration: none;
          font-size: 20px;
          position: absolute;
          top: 0;
          right: 0;
          [class*="icon-"] {
            top: 4px;
            right: 4px;
            position: absolute;
            z-index:2;
          }
          &:before {
            z-index: 1;
            position: absolute;
            top: 0;
            right: 0;
            display: block;
            content: '';
            width: 0;
            height: 0;
            border-top: 48px solid darkPrimaryColor;
            border-left: 48px solid transparent;
          }
        }
      }

      &:hover , &.active {
        border-color: primaryColor;
        .actions { opacity: 1; }
      }
    }

    img {
      max-width: 100%;
      height: auto;
    }
  }
}

.modal-dialog {
  width: 480px;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  position: absolute;

}

.wrapper-modal-assign-photo {
  .modal-body { height: 240px; }
  .dropdown-collections {
      position: relative;
  }
  .album-list { 
      display: none; 
      overflow-x: hidden;
      overflow-y: auto;
      margin-top: -14px;
      border-radius: 0 0 4px 4px;
      border: 1px solid darkPrimaryColor;
      border-top:0;
      width: 448px;
      position: absolute;
      top: 100%;
      left: 0;
      background-color: #fff;
      color: #444;
      max-height: 140px;    
      li { 
        padding: 12px; 
        cursor: pointer;
        trans(background-color, .25s);
        truncate();
        &:hover {
          background-color: #e7e7e7;
        }
        &.item-new { border-bottom: 1px solid #acacac;}
      }
  }
  .dropdown-collections {
    .btn {
      position: absolute;
      top: 18px;
      right: 8px;
      padding: 4px;
      border-radius: 4px;
    }
    
    &.open .album-list { display: block; }
  }
}

